[tool.poetry]
name = "dropit"
version = "0.1.1"
description = ""
authors = ["Konstantin Freidlin <freidlinks@ya.ru>"]
packages = [
    { include = "dropit" }
]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
clipboard = "^0.0.4"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dropit = "dropit.scripts.dropit:main"
